--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-api",
   "private": true,
-  "version": "1.0.0",
+  "version": "v1.22.19",
   "author": "namlato102",
   "description": "backend dev",
   "engines": {
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "lint": "eslint src --ext js --report-unused-disable-directives --max-warnings 0",
-    "clean": "rm -rf build && mkdir build",
+    "clean": "rd /s /q build && mkdir build",
     "build-babel": "babel ./src -d ./build/src",
     "build": "npm run clean && npm run build-babel",
     "production": "npm run build && node ./build/src/server.js",
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.22.10",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
